--- a/TeamCores.Web/Views/Exams/Test.cshtml
+++ b/TeamCores.Web/Views/Exams/Test.cshtml
@@ -244,13 +244,13 @@
 								this.surplusTime = Number(this.newExam.Time) * 60;
 								//答题弹窗显示
 								this.modalTest = true;
-							} else {
-								apiError(data.Code, data.Message);
-							}
-						},
-						error: (error) => {
-							apiError(null,'考卷数据拉取失败，请重试');
-						}
+                            } else {
+                                apiError.call(this, data.Code, data.Data);
+                            }
+                        },
+                        error: (error) => {
+                            apiError.call(this);
+                        }
 					});
 				},
 				/**
@@ -345,13 +345,13 @@
 								} else {
 									this.$Message.error("考卷答案信息提交失败，请重试。");
 								}
-							} else {
-								this.$Message.error(data.Message);
-							}
-						},
-						error: (error) => {
-							this.$Message.error("操作失败，请重试。");
-						}
+                            } else {
+                                apiError.call(this, data.Code, data.Data);
+                            }
+                        },
+                        error: (error) => {
+                            apiError.call(this);
+                        }
 					});
 				}
 			}
