--- a/TeamCores.Web/Views/Exams/TestDetails.cshtml
+++ b/TeamCores.Web/Views/Exams/TestDetails.cshtml
@@ -209,12 +209,14 @@
                             var data = response.data;
                             if (!data.Error) {
                                 this.details = data.Data;
-							} else {
-								apiError(data.Code, data.Message);
+                            } else {
+                                this.details = null;
+                                apiError.call(this, data.Code, data.Data);
                             }
                         },
                         error: (error) => {
-							apiError(null,"加载数据失败，请重试");
+                            this.details = null;
+                            apiError.call(this);
                         }
                      });
                 }
