--- a/TeamCores.Web/Views/UserStudyPlan/Details.cshtml
+++ b/TeamCores.Web/Views/UserStudyPlan/Details.cshtml
@@ -163,15 +163,15 @@
 							var data = response.data;
 							if (!data.Error) {
 								this.details = data.Data;
-							} else {
-								this.details = null;
-								apiError(data.Code, data.Message);
-							}
-						},
+                            } else {
+                                this.details = null;
+                                apiError.call(this, data.Code, data.Data);
+                            }
+                        },
                         error: (error) => {
-							this.details = null;
-							apiError(null,'请求数据失败，请重试！');
-						}
+                            this.details = null;
+                            apiError.call(this);
+                        }
 					});
 				}
 			}
