--- a/TeamCores.Web/Views/User/Modify.cshtml
+++ b/TeamCores.Web/Views/User/Modify.cshtml
@@ -31,7 +31,8 @@
         </Form-item>
 
         <Form-item class="w-48 form-button">
-            <i-button type="primary" v-on:click="formSubmit" style="margin-left: 8px">提交</i-button>
+            <i-button type="primary" v-on:click="formSubmit">提交</i-button>
+			<i-button v-on:click="goBack('/')" style="margin-left: 8px">取消</i-button>
         </Form-item>
     </i-form>
 
