--- a/TeamCores.Web/Views/User/ModifyPwd.cshtml
+++ b/TeamCores.Web/Views/User/ModifyPwd.cshtml
@@ -17,7 +17,8 @@
             <i-input type="password" v-model="user.NewPwd" placeholder="请输入新密码"></i-input>
         </Form-item>
         <Form-item class="w-48 form-button">
-            <i-button type="primary" v-on:click="formSubmit" style="margin-left: 8px">提交</i-button>
+            <i-button type="primary" v-on:click="formSubmit">提交</i-button>
+			<i-button v-on:click="goBack('/')" style="margin-left: 8px">取消</i-button>
         </Form-item>
     </i-form>
 
